# AntleredOS

./: CMakeLists.txt  interpreter.c  interpreter.h  mysh  shell.c  shellmemory.c  shellmemory.h  testfile.txt
Assignment 1/: README.md  README.txt  interpreter.h  shell.h  shellmemory.c  shellmemory.h
Assignment 2/: CMakeLists.txt  README.txt  cpu.c  interpreter.c  kernel.c  kernel.h  myKnel  mysh  pcb.c  pcb.h  ram.c  ram.h  shell.h  test
Assignment 3/: CMakeLists.txt  pcb.h
Assignment_3/: CMakeLists.txt  cpu.c  cpu.h  interpreter.c  kernel.c  kernel.h  memorymanager.c  memorymanager.h  pcb.c  ram.c  ram.h  shell.c  test
Assignment_3/BackingStore/: PCB000.txt  PCB001.txt
